<?xml version="1.0" encoding="utf-8"?><!--
     Copyright (C) 2013 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>

    <string name="app_name">BLE MESH Controller</string>
    <string name="device">Device:</string>
    <string name="no_device">&lt;Select a device&gt;</string>
    <string name="select_device">Select a device</string>
    <string name="status">Status</string>
    <string name="llsWrite">LinkLossAlert</string>
    <string name="iasWrite">ImmediateAlert</string>
    <string name="scanning">Scanning for devices...</string>
    <string name="no_ble_devices">No LE devices found.</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Not connected</string>
    <string name="ready">Ready</string>
    <string name="disconnect">Disconnect</string>
    <string name="connect">connect</string>
    <string name="unpair">unpair</string>
    <string name="pair">pair</string>
    <string name="name">admin</string>
    <string name="RadioButton1">Alert level high</string>
    <string name="RadioButton2">Alert level mid</string>
    <string name="RadioButton3">Stop alerting</string>
    <string name="SystemId">SystemId</string>
    <string name="ModelNumber">ModelNumber</string>
    <string name="SerialNumber">SerialNumber</string>
    <string name="FirmwareRevision">FirmwareRevision</string>
    <string name="HardwareRevision">HardwareRevision</string>
    <string name="SoftwareRevision">SoftwareRevision</string>
    <string name="ManufactureName">ManufactureName</string>
    <string name="RegCertDataList">RegCertDataList</string>
    <string name="ManufactureId">    ManufactureId</string>
    <string name="BatteryLevel">    Battery Level</string>
    <string name="OrgId">    OrganizationId</string>
    <string name="Txpower">    Txpower Level</string>
    <string name="Noupdate">    No Update</string>
    <string name="ReadTxPower">ReadTxPower</string>
    <string name="high_alert">HIGH Alert triggered!</string>
    <string name="low_alert">LOW Alert triggered!</string>
    <string name="writeTxnoti">TxNoti</string>
    <string name="readRssi">Read Rssi Value</string>
    <string name="Readdummy">D Read</string>
    <string name="removeBond">Remove Bond</string>
    <string name="paired">paired</string>
    <string name="popup_title">Quit BLE MESH Controller?</string>
    <string name="popup_title_back">Do you want to go back to Login Page?</string>
    <string name="popup_message_back">You will be logged out.</string>
    <string name="popup_message">Do you want to quit this Application?</string>
    <string name="popup_yes">YES</string>
    <string name="popup_no">NO</string>
    <string name="ble_not_supported">Bluetooth Low Energy not supported</string>
    <string name="scan">Scan</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_login">BLE MESH Controller</string>

    <!--new string-->
    <string name="connect_with_device">Connect to the network</string>
    <string name="CREATE_ACCOUNT">CREATE ACCOUNT</string>
    <string name="save_account">Save Account</string>
    <string name="enter_login">Enter Login for User</string>
    <string name="enter_password">Enter Password for User</string>
    <string name="door_1">Access to the Door 1</string>
    <string name="door_2">Access to the Door 2</string>
    <string name="door1">Door 1</string>
    <string name="door2">Door 2</string>
    <string name="nameOfDoor">Door to the laboratory</string>
    <string name="nameOfDoor1">Door to the storage room</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="checkTheState">Check the state:</string>
    <string name="default_state">-</string>


    <!-- Strings related to login -->
    <string name="prompt_email">Login</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is too short</string>
    <string name="error_door_required">Door selection is required</string>
    <string name="account_was_created">Account was created</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_create_account">CreateAccount</string>
    <string name="title_activity_admin">Admin Panel</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_main3">Main3Activity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="adminDefaultTabText">ADMIN DEFAULT</string>
    <string name="adminCreateAccountTabText">ADMIN CREATE ACCOUNT</string>
    <string name="adminShowUsersTabText">ADMIN SHOWS USERS</string>
    <string name="enterPersonalData">Enter personal data:</string>
    <string name="setUpAccessibility">Set up accessibility:</string>
    <string name="title_activity_user">UserActivity</string>
    <string name="show_users">Show users</string>
    <string name="disconnecting_message">Connection fails. Try again…</string>

</resources>

