<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.wordpress.bennthomsen.bleuart.CreateAccount">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:layout_marginBottom="50dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="CREATE ACCOUNT"
        android:textAlignment="center"
        android:textColor="@color/abc_input_method_navigation_guard"
        android:textSize="36sp"
        android:textStyle="bold|italic"
        android:verticalScrollbarPosition="defaultPosition"
        app:layout_constraintBottom_toBottomOf="@+id/loginForNewUser"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:textAlignment="center" />

    <Button
        android:id="@+id/saveAccountButton"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="42dp"
        android:text="@string/save_account"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <EditText
        android:id="@+id/loginForNewUser"
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:layout_marginBottom="60dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:ems="10"
        android:hint="@string/enter_login"
        android:inputType="textPersonName"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/passwordForNewUser"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <EditText
        android:id="@+id/passwordForNewUser"
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:layout_marginBottom="70dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="100dp"
        android:ems="10"
        android:hint="@string/enter_password"
        android:inputType="textPersonName"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/checkBoxDoor1"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <CheckBox
        android:id="@+id/checkBoxDoor1"
        android:layout_width="353dp"
        android:layout_height="33dp"
        android:layout_marginBottom="41dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:checked="false"
        android:longClickable="false"
        android:saveEnabled="false"
        android:text="@string/door_1"
        android:textIsSelectable="false"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/checkBoxDoor2"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <CheckBox
        android:id="@+id/checkBoxDoor2"
        android:layout_width="352dp"
        android:layout_height="41dp"
        android:layout_marginBottom="100dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/door_2"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/saveAccountButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</android.support.constraint.ConstraintLayout>
